// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Period Timeline Component > Periods > Period > should match snapshot when started at and finished at are provided in props. 1`] = `
"<div data-v-a56b5921="" id="period-timeline" class="d-flex flex-column h-100"><a data-v-a56b5921="" id="timeline-logo" href="url" rel="noopener noreferrer" target="_blank">
    <nuxt-img-stub data-v-a56b5921="" alt="imageAlt" format="webp" src="/images/logos/image" preload="false" crossorigin="false" placeholder="false" custom="false" class="logo timeline-logo-image white-logo"></nuxt-img-stub>
  </a>
  <hr data-v-a56b5921="" class="my-3">
  <div data-v-a56b5921="" class="d-flex flex-column flex-grow-1">
    <div data-v-a56b5921="" id="period-dates" aria-label="PeriodTimeline.periodDatesAriaLabel, {&quot;startedAt&quot;:&quot;janvier 2022&quot;,&quot;finishedAt&quot;:&quot;mars 2024&quot;}" class="align-items-center d-flex flex-column flex-grow-1 justify-content-center" role="region">
      <div data-v-a56b5921="" id="finished-at-date" class="period-date">mars 2024</div>
      <wrapped-font-awesome-icon-stub data-v-a56b5921="" icon="fa-arrow-up" iconcolor="#00000" size="2x" classes="my-3" id="arrow-up-icon"></wrapped-font-awesome-icon-stub>
      <div data-v-a56b5921="" id="started-at-date" class="period-date">janvier 2022</div>
    </div>
    <div data-v-a56b5921="" id="period-label" class="align-items-center d-flex flex-column">
      <hr data-v-a56b5921="" class="w-100">
      <div data-v-a56b5921="" class="font-italic font-weight-bold small">( shared.years, {"yearCount":2}, 2 shared.and shared.months, {"monthCount":3} )</div>
    </div>
  </div>
</div>"
`;

exports[`Period Timeline Component > Periods > Started at date > should match snapshot when started at date is provided in props. 1`] = `
"<div data-v-a56b5921="" id="period-timeline" class="d-flex flex-column h-100"><a data-v-a56b5921="" id="timeline-logo" href="url" rel="noopener noreferrer" target="_blank">
    <nuxt-img-stub data-v-a56b5921="" alt="imageAlt" format="webp" src="/images/logos/image" preload="false" crossorigin="false" placeholder="false" custom="false" class="logo timeline-logo-image white-logo"></nuxt-img-stub>
  </a>
  <hr data-v-a56b5921="" class="my-3">
  <div data-v-a56b5921="" class="d-flex flex-column flex-grow-1">
    <div data-v-a56b5921="" id="period-dates" aria-label="shared.today" class="align-items-center d-flex flex-column flex-grow-1 justify-content-center" role="region">
      <div data-v-a56b5921="" id="finished-at-date" class="period-date">shared.today</div>
      <wrapped-font-awesome-icon-stub data-v-a56b5921="" icon="fa-arrow-up" iconcolor="#00000" size="2x" classes="my-3" id="arrow-up-icon"></wrapped-font-awesome-icon-stub>
      <div data-v-a56b5921="" id="started-at-date" class="period-date">janvier 2022</div>
    </div>
    <div data-v-a56b5921="" id="period-label" class="align-items-center d-flex flex-column">
      <hr data-v-a56b5921="" class="w-100">
      <div data-v-a56b5921="" class="font-italic font-weight-bold small">( shared.months, {"monthCount":1} )</div>
    </div>
  </div>
</div>"
`;

exports[`Period Timeline Component > should match snapshot when rendered. 1`] = `
"<div data-v-a56b5921="" id="period-timeline" class="d-flex flex-column h-100"><a data-v-a56b5921="" id="timeline-logo" href="url" rel="noopener noreferrer" target="_blank">
    <nuxt-img-stub data-v-a56b5921="" alt="imageAlt" format="webp" src="/images/logos/image" preload="false" crossorigin="false" placeholder="false" custom="false" class="logo timeline-logo-image white-logo"></nuxt-img-stub>
  </a>
  <hr data-v-a56b5921="" class="my-3">
  <div data-v-a56b5921="" class="d-flex flex-column flex-grow-1">
    <div data-v-a56b5921="" id="period-dates" aria-label="shared.today" class="align-items-center d-flex flex-column flex-grow-1 justify-content-center" role="region">
      <div data-v-a56b5921="" id="finished-at-date" class="period-date">shared.today</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;
